# pong

./: .gitignore  CLAUDE.md  CMakeLists.txt  Pong.json  pong.py  pong.yaml  todo.md
.claude/commands/: update-claude-md.md
shaders/: compute.slang  shader.slang
src/: gamestate.cpp  gamestate.h  inputstate.cpp  inputstate.h  libs.cpp  main.cpp  renderer.cpp  renderer.h  window.h
tools/: game_data.py  gamedata.py  utility.py
